Agregando acciones para reailizar las mediciones

--- a/imedig-viewer-vaadin/src/main/resources/VAADIN/themes/imedigviewer/imedigviewer.scss
+++ b/imedig-viewer-vaadin/src/main/resources/VAADIN/themes/imedigviewer/imedigviewer.scss
@@ -23,6 +23,7 @@ $v-selection-overlay-background-color: #fff;
 $v-selection-overlay-padding-horizontal: 0;
 $v-selection-overlay-padding-vertical: 6px;
 $v-panel-border: 2px solid v-shade;
+$v-unit-size: 30px;
 
 /*$v-background-color: hsl(0, 0, 99.5%);
 $v-app-background-color: #fff;
