--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/imedig.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/imedig.scss
@@ -5,7 +5,7 @@ $v-background-color: #444d50;
 $v-focus-color: #02925d;
 $v-focus-style: 0 0 3px 2px $v-focus-color;
 $v-bevel-depth: 40%;
-$v-bevel: false;
+//$v-bevel: false;
 $v-gradient: false;
 $v-shadow: false;
 $v-border-radius: 0px;
