--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
@@ -2112,8 +2112,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 }
 
 .imedig .v-button:before {
@@ -2200,8 +2201,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #02925d;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #17b678, inset 0 -1px 0 #028556;
+	box-shadow: inset 0 1px 0 #17b678, inset 0 -1px 0 #028556;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	padding: 0 18px;
 	font-weight: bold;
 	min-width: 77px;
@@ -2243,8 +2245,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #2c9720;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #4bb240, inset 0 -1px 0 #2c8b20;
+	box-shadow: inset 0 1px 0 #4bb240, inset 0 -1px 0 #2c8b20;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 }
 
 .imedig .v-button-friendly:after {
@@ -2279,8 +2282,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #ed473b;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #ef817a, inset 0 -1px 0 #e34035;
+	box-shadow: inset 0 1px 0 #ef817a, inset 0 -1px 0 #e34035;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 }
 
 .imedig .v-button-danger:after {
@@ -2569,8 +2573,8 @@ div.v-layout.v-horizontal.v-widget {
 	border: 1px solid #303739;
 	-webkit-box-shadow: 0 0 3px 2px #02925d;
 	box-shadow: 0 0 3px 2px #02925d;
-	-webkit-box-shadow: 0 0 3px 2px #02925d;
-	box-shadow: 0 0 3px 2px #02925d;
+	-webkit-box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
 }
 
 :root .imedig .v-checkbox > input ~ label:before, :root .imedig .v-checkbox > input ~ label:after {
@@ -2599,8 +2603,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	padding: 0;
 	height: 18px;
 }
@@ -2694,8 +2699,8 @@ div.v-layout.v-horizontal.v-widget {
 	border: 1px solid #303739;
 	-webkit-box-shadow: 0 0 3px 2px #02925d;
 	box-shadow: 0 0 3px 2px #02925d;
-	-webkit-box-shadow: 0 0 3px 2px #02925d;
-	box-shadow: 0 0 3px 2px #02925d;
+	-webkit-box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
 }
 
 :root .imedig .v-checkbox-small > input ~ label:before, :root .imedig .v-checkbox-small > input ~ label:after {
@@ -2724,8 +2729,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	padding: 0;
 	height: 15px;
 }
@@ -2819,8 +2825,8 @@ div.v-layout.v-horizontal.v-widget {
 	border: 1px solid #303739;
 	-webkit-box-shadow: 0 0 3px 2px #02925d;
 	box-shadow: 0 0 3px 2px #02925d;
-	-webkit-box-shadow: 0 0 3px 2px #02925d;
-	box-shadow: 0 0 3px 2px #02925d;
+	-webkit-box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
 }
 
 :root .imedig .v-checkbox-large > input ~ label:before, :root .imedig .v-checkbox-large > input ~ label:after {
@@ -2849,8 +2855,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	padding: 0;
 	height: 21px;
 }
@@ -2941,8 +2948,8 @@ div.v-layout.v-horizontal.v-widget {
 	border: 1px solid #2a2f31;
 	background: #3b4245;
 	color: #c7cbcc;
-	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
+	-webkit-box-shadow: inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
+	box-shadow: inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
 	-webkit-transition: box-shadow 180ms, border 180ms;
 	-moz-transition: box-shadow 180ms, border 180ms;
 	transition: box-shadow 180ms, border 180ms;
@@ -2968,8 +2975,8 @@ div.v-layout.v-horizontal.v-widget {
 	-webkit-transition: none;
 	-moz-transition: none;
 	transition: none;
-	-webkit-box-shadow: 0 0 3px 2px #02925d, 0 1px 0 rgba(255, 255, 255, 0.1);
-	box-shadow: 0 0 3px 2px #02925d, 0 1px 0 rgba(255, 255, 255, 0.1);
+	-webkit-box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
+	box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
 	-webkit-box-shadow: 0 0 3px 2px #02925d;
 	box-shadow: 0 0 3px 2px #02925d;
 }
@@ -3349,8 +3356,8 @@ div.v-layout.v-horizontal.v-widget {
 	user-select: none;
 	background: #444d50;
 	cursor: inherit;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
 	border: 1px solid #303739;
 	text-shadow: inherit;
 	text-overflow: ellipsis;
@@ -3362,8 +3369,8 @@ div.v-layout.v-horizontal.v-widget {
 	-webkit-transition: none;
 	-moz-transition: none;
 	transition: none;
-	-webkit-box-shadow: 0 0 3px 2px #02925d;
-	box-shadow: 0 0 3px 2px #02925d;
+	-webkit-box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
 	-webkit-box-shadow: 0 0 3px 2px #02925d;
 	box-shadow: 0 0 3px 2px #02925d;
 }
@@ -4954,8 +4961,8 @@ div.v-layout.v-horizontal.v-widget {
 	border: none;
 	border-radius: 0;
 	background: transparent;
-	-webkit-box-shadow: none;
-	box-shadow: none;
+	-webkit-box-shadow: inset 0 1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #40484b;
 }
 
 .imedig .v-grid-editor-cells > div input[type="text"].v-datefield-textfield {
@@ -5082,8 +5089,8 @@ div.v-layout.v-horizontal.v-widget {
 	border: 1px solid #2a2f31;
 	background: #3b4245;
 	color: #c7cbcc;
-	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
+	-webkit-box-shadow: inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
+	box-shadow: inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
 	-webkit-transition: box-shadow 180ms, border 180ms;
 	-moz-transition: box-shadow 180ms, border 180ms;
 	transition: box-shadow 180ms, border 180ms;
@@ -5106,8 +5113,8 @@ div.v-layout.v-horizontal.v-widget {
 	-webkit-transition: none;
 	-moz-transition: none;
 	transition: none;
-	-webkit-box-shadow: 0 0 3px 2px #02925d, 0 1px 0 rgba(255, 255, 255, 0.1);
-	box-shadow: 0 0 3px 2px #02925d, 0 1px 0 rgba(255, 255, 255, 0.1);
+	-webkit-box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
+	box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
 	-webkit-box-shadow: 0 0 3px 2px #02925d;
 	box-shadow: 0 0 3px 2px #02925d;
 }
@@ -5572,8 +5579,8 @@ div.v-layout.v-horizontal.v-widget {
 	border: 1px solid #2a2f31;
 	background: #3b4245;
 	color: #c7cbcc;
-	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
+	-webkit-box-shadow: inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
+	box-shadow: inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
 	-webkit-transition: box-shadow 180ms, border 180ms;
 	-moz-transition: box-shadow 180ms, border 180ms;
 	transition: box-shadow 180ms, border 180ms;
@@ -5599,8 +5606,8 @@ div.v-layout.v-horizontal.v-widget {
 	-webkit-transition: none;
 	-moz-transition: none;
 	transition: none;
-	-webkit-box-shadow: 0 0 3px 2px #02925d, 0 1px 0 rgba(255, 255, 255, 0.1);
-	box-shadow: 0 0 3px 2px #02925d, 0 1px 0 rgba(255, 255, 255, 0.1);
+	-webkit-box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
+	box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
 	-webkit-box-shadow: 0 0 3px 2px #02925d;
 	box-shadow: 0 0 3px 2px #02925d;
 }
@@ -5860,8 +5867,8 @@ div.v-layout.v-horizontal.v-widget {
 	border: 1px solid #2a2f31;
 	background: #3b4245;
 	color: #c7cbcc;
-	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
+	-webkit-box-shadow: inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
+	box-shadow: inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
 	-webkit-transition: box-shadow 180ms, border 180ms;
 	-moz-transition: box-shadow 180ms, border 180ms;
 	transition: box-shadow 180ms, border 180ms;
@@ -5887,8 +5894,8 @@ div.v-layout.v-horizontal.v-widget {
 	-webkit-transition: none;
 	-moz-transition: none;
 	transition: none;
-	-webkit-box-shadow: 0 0 3px 2px #02925d, 0 1px 0 rgba(255, 255, 255, 0.1);
-	box-shadow: 0 0 3px 2px #02925d, 0 1px 0 rgba(255, 255, 255, 0.1);
+	-webkit-box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
+	box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
 	-webkit-box-shadow: 0 0 3px 2px #02925d;
 	box-shadow: 0 0 3px 2px #02925d;
 }
@@ -7216,8 +7223,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	padding: 0;
 	text-align: left;
 	line-height: 33px;
@@ -7293,8 +7301,8 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0;
 	border: 1px solid #303739;
 	background: #444d50;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
 	background: transparent;
 	-webkit-box-shadow: none;
 	box-shadow: none;
@@ -7381,8 +7389,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0;
 	border: 1px solid #303739;
 	background: #02925d;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #17b678, inset 0 -1px 0 #028556;
+	box-shadow: inset 0 1px 0 #17b678, inset 0 -1px 0 #028556;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	border-top-width: 0;
 	border-left-width: 0;
 	border-bottom-width: 0;
@@ -7646,8 +7655,8 @@ div.v-layout.v-horizontal.v-widget {
 	border: 1px solid #303739;
 	-webkit-box-shadow: 0 0 3px 2px #02925d;
 	box-shadow: 0 0 3px 2px #02925d;
-	-webkit-box-shadow: 0 0 3px 2px #02925d;
-	box-shadow: 0 0 3px 2px #02925d;
+	-webkit-box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
 }
 
 :root .imedig .v-radiobutton > input ~ label:before, :root .imedig .v-radiobutton > input ~ label:after {
@@ -7676,8 +7685,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	padding: 0;
 	height: 18px;
 }
@@ -7804,8 +7814,8 @@ div.v-layout.v-horizontal.v-widget {
 	border: 1px solid #303739;
 	-webkit-box-shadow: 0 0 3px 2px #02925d;
 	box-shadow: 0 0 3px 2px #02925d;
-	-webkit-box-shadow: 0 0 3px 2px #02925d;
-	box-shadow: 0 0 3px 2px #02925d;
+	-webkit-box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
 }
 
 :root .imedig .v-select-optiongroup-small .v-checkbox > input ~ label:before, :root .imedig .v-select-optiongroup-small .v-checkbox > input ~ label:after {
@@ -7834,8 +7844,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	padding: 0;
 	height: 15px;
 }
@@ -7928,8 +7939,8 @@ div.v-layout.v-horizontal.v-widget {
 	border: 1px solid #303739;
 	-webkit-box-shadow: 0 0 3px 2px #02925d;
 	box-shadow: 0 0 3px 2px #02925d;
-	-webkit-box-shadow: 0 0 3px 2px #02925d;
-	box-shadow: 0 0 3px 2px #02925d;
+	-webkit-box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
 }
 
 :root .imedig .v-select-optiongroup-small .v-radiobutton > input ~ label:before, :root .imedig .v-select-optiongroup-small .v-radiobutton > input ~ label:after {
@@ -7958,8 +7969,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	padding: 0;
 	height: 15px;
 }
@@ -8086,8 +8098,8 @@ div.v-layout.v-horizontal.v-widget {
 	border: 1px solid #303739;
 	-webkit-box-shadow: 0 0 3px 2px #02925d;
 	box-shadow: 0 0 3px 2px #02925d;
-	-webkit-box-shadow: 0 0 3px 2px #02925d;
-	box-shadow: 0 0 3px 2px #02925d;
+	-webkit-box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
 }
 
 :root .imedig .v-select-optiongroup-large .v-checkbox > input ~ label:before, :root .imedig .v-select-optiongroup-large .v-checkbox > input ~ label:after {
@@ -8116,8 +8128,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	padding: 0;
 	height: 21px;
 }
@@ -8210,8 +8223,8 @@ div.v-layout.v-horizontal.v-widget {
 	border: 1px solid #303739;
 	-webkit-box-shadow: 0 0 3px 2px #02925d;
 	box-shadow: 0 0 3px 2px #02925d;
-	-webkit-box-shadow: 0 0 3px 2px #02925d;
-	box-shadow: 0 0 3px 2px #02925d;
+	-webkit-box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: 0 0 3px 2px #02925d, inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
 }
 
 :root .imedig .v-select-optiongroup-large .v-radiobutton > input ~ label:before, :root .imedig .v-select-optiongroup-large .v-radiobutton > input ~ label:after {
@@ -8240,8 +8253,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	padding: 0;
 	height: 21px;
 }
@@ -9184,8 +9198,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	position: absolute;
 	z-index: 2;
 	top: 0;
@@ -9552,8 +9567,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	-webkit-box-shadow: none;
-	box-shadow: none;
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b, none;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b, none;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	height: auto;
 	padding: 0;
 	border-radius: 0;
@@ -9605,8 +9621,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	-webkit-box-shadow: none;
-	box-shadow: none;
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b, none;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b, none;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	height: auto;
 	padding: 0;
 	border-radius: 0;
@@ -9653,8 +9670,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	-webkit-box-shadow: none;
-	box-shadow: none;
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b, none;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b, none;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	height: auto;
 	padding: 0;
 	border-radius: 0;
@@ -9720,8 +9738,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	-webkit-box-shadow: none;
-	box-shadow: none;
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b, none;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b, none;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	height: auto;
 	padding: 0;
 	border-radius: 0;
@@ -9939,8 +9958,9 @@ div.v-layout.v-horizontal.v-widget {
 	border-radius: 0px;
 	border: 1px solid #303739;
 	background: #444d50;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 }
 
 .imedig .v-slider-handle:before:after {
@@ -10625,8 +10645,8 @@ div.v-layout.v-horizontal.v-widget {
 	color: #cacecf;
 	font-weight: 400;
 	font-size: 14px;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	border-radius: -1px -1px 0 0;
 }
@@ -10776,8 +10796,8 @@ div.v-layout.v-horizontal.v-widget {
 	color: #cacecf;
 	font-weight: 400;
 	font-size: 14px;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05);
 	display: block;
 	background: transparent;
@@ -11810,8 +11830,8 @@ div.v-layout.v-horizontal.v-widget {
 	border: 1px solid #2a2f31;
 	background: #3b4245;
 	color: #c7cbcc;
-	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
+	-webkit-box-shadow: inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
+	box-shadow: inset 0 1px 0 #383e41, 0 1px 0 rgba(255, 255, 255, 0.1);
 	-webkit-transition: box-shadow 180ms, border 180ms;
 	-moz-transition: box-shadow 180ms, border 180ms;
 	transition: box-shadow 180ms, border 180ms;
@@ -11831,8 +11851,8 @@ div.v-layout.v-horizontal.v-widget {
 
 .imedig .v-richtextarea .gwt-RichTextToolbar {
 	background: #444d50;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
+	box-shadow: inset 0 1px 0 #646464, inset 0 -1px 0 #40484b;
 	border-bottom: 1px solid #303739;
 	color: #cacecf;
 }
@@ -12420,8 +12440,8 @@ div.v-layout.v-horizontal.v-widget {
 
 .imedig .valo-menu-title .v-menubar-menuitem {
 	background: transparent;
-	
-	
+	-webkit-box-shadow: inset 0 1px 0 #17b678, inset 0 -1px 0 #028556;
+	box-shadow: inset 0 1px 0 #17b678, inset 0 -1px 0 #028556;
 	text-shadow: inherit;
 	font-size: 16px;
 	border-color: inherit;
@@ -13012,6 +13032,12 @@ div.v-layout.v-horizontal.v-widget {
 	box-shadow: none !important;
 }
 
+.v-button-toolbar {
+	font-size: 26px !important;
+	line-height: 1;
+}
+
 .v-button-toolbar .v-button-caption {
-	font-size: 16px !important;
+	font-size: 13px !important;
+	font-weight: normal;
 }
