--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/imedig.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/imedig.scss
@@ -5,11 +5,11 @@ $v-background-color: #444d50;
 $v-focus-color: #02925d;
 $v-focus-style: 0 0 3px 2px $v-focus-color;
 $v-bevel-depth: 40%;
-//$v-bevel: false;
+$v-bevel: false;
 $v-gradient: false;
 $v-shadow: false;
 $v-border-radius: 0px;
-$v-font-family: Roboto, sans-serif;
+$v-font-family: Roboto,'Open Sans',Lato;
 $v-font-weight: 400;
 $v-font-weight--header: 600;
 $v-unit-size: 35px;
