--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -84,6 +84,10 @@
   font-size: 26px !important;
 }
 
+.selected{
+  color: $v-focus-color !important;
+}
+
 .v-button-toolbox:focus:after{
 	-webkit-box-shadow: none !important;
 	box-shadow: none !important;
