--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
@@ -13133,10 +13133,11 @@ div.v-layout.v-horizontal.v-widget {
 .copyright {
 	font-family: Roboto, sans-serif;
 	font-size: 13px;
-	border-right: 1px solid #7b7b7b;
+	text-shadow: -1px 1px 1px #020202;
+	color: #ecedee;
+	border-left: 1px solid #7b7b7b;
 	border-top: 1px solid #7b7b7b;
 	background: #505a5d;
-	color: #ecedee;
 	padding: 2px 3px;
 	position: fixed;
 	right: 0px;
