--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
@@ -13100,7 +13100,7 @@ div.v-layout.v-horizontal.v-widget {
 	padding-top: 8px !important;
 }
 
-.v-button-fullscreen {
+.fullscreen {
 	position: fixed !important;
 	right: 0px !important;
 	top: 0px !important;
@@ -13110,22 +13110,7 @@ div.v-layout.v-horizontal.v-widget {
 	font-size: 22px;
 }
 
-.v-button-fullscreen:focus:after {
-	-webkit-box-shadow: none !important;
-	box-shadow: none !important;
-}
-
-.v-button-restore {
-	position: fixed !important;
-	right: 0px !important;
-	top: 0px !important;
-	margin-top: 3px !important;
-	margin-right: 3px !important;
-	z-index: 20;
-	font-size: 22px;
-}
-
-.v-button-restore:focus:after {
+.fullscreen:focus:after {
 	-webkit-box-shadow: none !important;
 	box-shadow: none !important;
 }
