--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -84,6 +84,13 @@
   font-size: 26px !important;
 }
 
+.toolbox-content{
+  margin-top: 0px;
+  padding-right: 3px;
+  margin-right: 3px;
+  border-right-style: ridge;
+}
+
 .selected{
   color: $v-focus-color !important;
 }
@@ -108,17 +115,22 @@
 	padding-top: 8px !important; 
 }
 
+.content{
+	display: contents !important;
+}
+
 .fullscreen{
-	position: fixed !important;
-	right: 0px !important;
-	top: 0px !important;
-	margin-top: 3px !important;
-	margin-right: 3px !important;
 	z-index: 30;
 	font-size: 22px;
+	float: right;
 	&:focus:after{
   	   -webkit-box-shadow: none !important;
 	   box-shadow: none !important;
+	}
+	& .v-button{
+	  z-index: 30;
+	  margin: 3px;
+	  background-color: rgba(0, 0, 0, 0.2) !important;
 	}
 }
 
