--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -88,7 +88,8 @@
   margin-top: 0px;
   padding-right: 3px;
   margin-right: 3px;
-  border-right-style: ridge;
+  border-right-style: solid;
+border-right-color: #303739;
 }
 
 .selected{
@@ -117,6 +118,11 @@
 
 .content{
 	display: contents !important;
+}
+
+.maincontent{
+	width: 100%;
+	height: 100%;
 }
 
 .fullscreen{
