--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
@@ -13079,6 +13079,7 @@ div.v-layout.v-horizontal.v-widget {
 	margin-top: 0px;
 	padding-right: 3px;
 	margin-right: 3px;
+	margin-left: 2px;
 	border-right-style: solid;
 	border-right-color: #303739;
 }
