--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -88,8 +88,9 @@
   margin-top: 0px;
   padding-right: 3px;
   margin-right: 3px;
+  margin-left: 2px;
   border-right-style: solid;
-border-right-color: #303739;
+  border-right-color: #303739;
 }
 
 .selected{
