--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
@@ -13096,6 +13096,9 @@ div.v-layout.v-horizontal.v-widget {
 .v-button-toolbar {
 	font-size: 24px !important;
 	line-height: 0.9;
+	padding: 12px !important;
+	width: 80px;
+	margin-bottom: 1px;
 }
 
 .v-button-toolbar .v-button-caption {
@@ -13103,10 +13106,52 @@ div.v-layout.v-horizontal.v-widget {
 	font-weight: normal;
 }
 
+.v-button-toolbar:focus:after {
+	-webkit-box-shadow: none !important;
+	box-shadow: none !important;
+}
+
+.v-button-toolbar:hover {
+	background-color: #1c2123;
+}
+
+.study-thumnails-panel .v-button {
+	font-size: 8px !important;
+	width: 14px !important;
+	height: 15px !important;
+	margin: 2px;
+	float: right;
+}
+
+.study-thumnails-panel .v-button:focus:after {
+	-webkit-box-shadow: none !important;
+	box-shadow: none !important;
+}
+
+.study-thumnails-panel .v-button:hover {
+	background-color: #1c2123;
+}
+
+.study-thumnails-panel .v-label {
+	color: #283033;
+	font-size: 11px;
+	font-weight: bold;
+	margin-bottom: 2px;
+	margin-left: 3px;
+}
+
+.study-thumnails-panel .v-image {
+	margin-bottom: 5px;
+}
+
 .v-horizontallayout-menu-layout {
 	background-color: #283033;
-	padding-bottom: 8px !important;
-	padding-top: 8px !important;
+}
+
+.v-horizontallayout-menu-layout .v-button-selected-menu::after {
+	border-bottom: 2px solid #fff !important;
+	border-bottom-color: white !important;
+	transition: transform 0.2s ease-in-out !important;
 }
 
 .content {
