--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
@@ -13199,3 +13199,8 @@ div.v-layout.v-horizontal.v-widget {
 	color: #ecedee;
 	text-decoration: none;
 }
+
+.filter-margin {
+	margin-bottom: 8px;
+	margin-right: 5px;
+}
