--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
@@ -1594,7 +1594,7 @@ div.v-layout.v-horizontal.v-widget {
 }
 
 .imedig.v-app, .imedig.v-app-loading {
-	font: 400 16px/1.55 Roboto, "Open Sans", Lato;
+	font: 400 16px/1.55 Roboto, "Open Sans", Lato, sans-serif;
 	color: #cacecf;
 	background-color: #444d50;
 	cursor: default;
@@ -13115,12 +13115,14 @@ div.v-layout.v-horizontal.v-widget {
 	background-color: #1c2123;
 }
 
+.study-thumnails-panel {
+	padding: 2px;
+}
+
 .study-thumnails-panel .v-button {
 	font-size: 8px !important;
 	width: 14px !important;
 	height: 15px !important;
-	margin: 2px;
-	float: right;
 }
 
 .study-thumnails-panel .v-button:focus:after {
@@ -13136,12 +13138,20 @@ div.v-layout.v-horizontal.v-widget {
 	color: #283033;
 	font-size: 11px;
 	font-weight: bold;
-	margin-bottom: 2px;
-	margin-left: 3px;
 }
 
 .study-thumnails-panel .v-image {
 	margin-bottom: 5px;
+}
+
+.to-right {
+	float: right;
+	width: 50% !important;
+}
+
+.to-left {
+	float: left;
+	width: 50% !important;
 }
 
 .v-horizontallayout-menu-layout {
