--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -122,12 +122,12 @@
 }
 
 .study-thumnails-panel{
+	padding: 2px;
 	& .v-button{
 		font-size: 8px !important;
 		width: 14px !important;
 		height: 15px !important;
-		margin: 2px;
-		float: right;
+		//margin: 2px;
 		&:focus:after{
 			-webkit-box-shadow: none !important;
 			box-shadow: none !important;
@@ -140,13 +140,23 @@
 		color: #283033;
 		font-size: 11px;
 		font-weight: bold;
-		margin-bottom: 2px;
-		margin-left: 3px;
+		//margin-bottom: 2px;
+		//margin-left: 3px;
 	}	
 	& .v-image{
 		margin-bottom: 5px;
 	}
 	
+}
+
+.to-right{
+    float: right;
+    width: 50% !important;
+}
+
+.to-left{
+    float: left;
+    width: 50% !important;
 }
 
 .v-horizontallayout-menu-layout{
