--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/imedig.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/imedig.scss
@@ -9,7 +9,7 @@ $v-bevel: false;
 $v-gradient: false;
 $v-shadow: false;
 $v-border-radius: 0px;
-$v-font-family: Roboto,'Open Sans',Lato,sans-serif;
+$v-font-family: Roboto,'Open Sans',sans-serif;
 $v-font-weight: 400;
 $v-font-weight--header: 600;
 $v-unit-size: 35px;
