--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
@@ -1594,7 +1594,7 @@ div.v-layout.v-horizontal.v-widget {
 }
 
 .imedig.v-app, .imedig.v-app-loading {
-	font: 400 16px/1.55 Roboto, "Open Sans", Lato, sans-serif;
+	font: 400 16px/1.55 Roboto, "Open Sans", sans-serif;
 	color: #cacecf;
 	background-color: #444d50;
 	cursor: default;
@@ -13138,6 +13138,7 @@ div.v-layout.v-horizontal.v-widget {
 	color: #283033;
 	font-size: 11px;
 	font-weight: bold;
+	line-height: 1.2;
 }
 
 .study-thumnails-panel .v-image {
