--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -127,23 +127,18 @@
 		font-size: 8px !important;
 		width: 14px !important;
 		height: 15px !important;
-		//margin: 2px;
 		&:focus:after{
 			-webkit-box-shadow: none !important;
 			box-shadow: none !important;
-		}
-		&:hover {
+		} &:hover {
     		background-color: #1c2123;
 		}
-	}
-	& .v-label{
+	} & .v-label{
 		color: #283033;
 		font-size: 11px;
 		font-weight: bold;
-		//margin-bottom: 2px;
-		//margin-left: 3px;
-	}	
-	& .v-image{
+		line-height: 1.2;
+	} & .v-image{
 		margin-bottom: 5px;
 	}
 	
