--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
@@ -13231,3 +13231,8 @@ div.v-layout.v-horizontal.v-widget {
 	margin-bottom: 8px;
 	margin-right: 5px;
 }
+
+.v-button-borderless:active {
+	opacity: 0.5 !important;
+	filter: alpha(opacity=50);
+}
