--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
@@ -13082,6 +13082,7 @@ div.v-layout.v-horizontal.v-widget {
 	margin-left: 2px;
 	border-right-style: solid;
 	border-right-color: #303739;
+	overflow: auto;
 }
 
 .selected {
@@ -13235,4 +13236,8 @@ div.v-layout.v-horizontal.v-widget {
 .v-button-borderless:active {
 	opacity: 0.5 !important;
 	filter: alpha(opacity=50);
+}
+
+.autoscroll {
+	overflow: auto;
 }
