--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -91,6 +91,7 @@
   margin-left: 2px;
   border-right-style: solid;
   border-right-color: #303739;
+  overflow: auto;
 }
 
 .selected{
@@ -231,5 +232,3 @@
 	opacity: 0.5 !important;
 	filter: alpha(opacity=50);
 }
-
-
