Agregando iconos a los reportes por los estados

--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -68,6 +68,54 @@
   background-color: #97D0FC;
 }
 
+.color_blue{
+  color: #1BA1E2;
+}
+
+.color_green{
+  color: #339933;
+}
+
+.color_brown{
+  color: #A05000;
+}
+
+.color_purple{
+	color: #A200FF;
+}
+
+.color_red{
+  color: #E51400;
+}
+
+.color_orange{
+  color: #F09609;
+}
+
+.color_teal{
+  color: #00ABA9;
+}
+
+.color_lime{
+  color: #8CBF26;
+}
+
+.color_pink{
+  color: #E671B8;
+}
+
+.color_magenta{
+  color: #0F0097;
+}
+
+.color_yellow{
+  color: #FFFF00;
+}
+
+.color_light_blue{
+  color: #97D0FC;
+}
+
 .bg_thumnails0{
 	background-color: #BABABA;
 }
