--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
@@ -13283,3 +13283,9 @@ div.v-layout.v-horizontal.v-widget {
 	opacity: 0.5 !important;
 	filter: alpha(opacity=50);
 }
+
+.v-Notification.info {
+	color: #283033;
+	background: #cacecf;
+	border: 1px solid #02925d;
+}
