--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -284,3 +284,9 @@
 	opacity: 0.5 !important;
 	filter: alpha(opacity=50);
 }
+
+.v-Notification.info {
+	color: #283033;
+	background: #cacecf;
+	border: 1px solid $v-focus-color;
+}
